--- a/Website/index.html
+++ b/Website/index.html
@@ -25,7 +25,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="resume.pdf">Resume</a></li>
+        <li><a href="resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -39,7 +39,7 @@
     </a>
   </div>
 <h3>About Me</h3>
-<p>My name is Isaac Haberman and I am a senior studying statistics and Carnegie Mellon University.  I'm currently interested in applying for statistics and data science masters programs and hopefully down the road for jobs in those fields.  Over the past few years I have worked as a data scientist and statistician for an Israeli Adtech firm, a Greenwich based Trading firm and a Pittsburgh based college student.  For any comments, question or concerns, feel free to reach out to isaachaberman@gmail.com  </p>
+<p>My name is Isaac Haberman and I am a senior studying statistics and Carnegie Mellon University.  I'm currently interested in applying for statistics and data science masters programs and hopefully down the road for jobs in those fields.  Over the past few years I have worked as a data scientist and statistician for an Israeli Adtech firm, a Greenwich based Trading firm and a Pittsburgh based college student.  For any comments, questions or concerns, feel free to reach out to me at isaachaberman@gmail.com  </p>
 </div>
 </div>
 
