--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="resume.pdf">Resume</a></li>
+        <li><a href="resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
