--- a/Website/index.html
+++ b/Website/index.html
@@ -39,7 +39,7 @@
     </a>
   </div>
 <h3>About Me</h3>
-<p>My name is Isaac Haberman and I am a senior studying statistics at Carnegie Mellon University.  I'm currently interested in applying for statistics and data science masters programs and hopefully down the road for jobs in those fields.  Over the past few years I have worked as a data scientist and statistician for an Israeli Adtech firm, a Greenwich based Trading firm and a Pittsburgh based college student.  For any comments, questions or concerns, feel free to reach out to me at isaachaberman@gmail.com  </p>
+<p>My name is Isaac Haberman and I am a senior studying statistics at Carnegie Mellon University.  I'm currently applying for statistics and data science masters programs.  Over the past few years I have worked as a data scientist and statistician for an Adtech firm in Tel Aviv, Israel and Trading firm in Greenwich, Connecticut.  For any comments, questions or concerns, feel free to reach out to me at ihaberma@andrew.cmu.com  </p>
 </div>
 </div>
 
