--- a/Website/index.html
+++ b/Website/index.html
@@ -39,7 +39,7 @@
     </a>
   </div>
 <h3>About Me</h3>
-<p>My name is Isaac Haberman and I am a senior studying statistics at Carnegie Mellon University.  I'm currently applying for statistics and data science masters programs.  Over the past few years I have worked as a data scientist and statistician for an Adtech firm in Tel Aviv, Israel and Trading firm in Greenwich, Connecticut.  For any comments, questions or concerns, feel free to reach out to me at ihaberma@andrew.cmu.com  </p>
+<p>My name is Isaac Haberman and I am a senior studying statistics at Carnegie Mellon University.  I'm currently applying for statistics and data science masters programs.  Over the past few years I have worked as a data scientist and statistician for an adtech firm in Tel Aviv, Israel and a trading firm in Greenwich, Connecticut.  For any comments, questions or concerns, feel free to reach out to me at ihaberma@andrew.cmu.com  </p>
 </div>
 </div>
 
