--- a/about.html
+++ b/about.html
@@ -24,9 +24,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="index.html">Projects</a></li>
         <li><a href="resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
