--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 
+
 <nav class="navbar navbar-default navbar-inverse" >
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -24,27 +25,111 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="index.html">Projects</a></li>
         <li><a href="resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+</div>
 
-<div class="row content container col-sm-10 col-sm-offset-1">
-<div class="jumbotron">
-<div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="me.jpg" alt="...">
-    </a>
+<br>
+<br>
+<br>
+<br>
+
+<div class="list-group">
+
+  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+    <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail">
+          <img src="images/dota.png" class="blurb-thumbnail" alt="...">
+        </a>
+    </div>
+    <div class="media-body">
+      <h3>Dota Data Analysis</h3>
+      <p>Analyzing data from Defense of the Ancients to predict winning based on gold and experience</p>
+      <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb">View Project</a>
+      <a href="https://1drv.ms/u/s!AmOVXN_ZlKloykaxok2KwCfjHLxn">Download Data Pt1</a>
+      <a href="https://1drv.ms/u/s!AmOVXN_ZlKloyjH08H1gWq_aNs-9">Download Data Pt2</a>
+    </div>
   </div>
-<h3>About Me</h3>
-<p>My name is Isaac Haberman and I am a senior studying statistics at Carnegie Mellon University.  I'm currently applying for statistics and data science masters programs.  Over the past few years I have worked as a data scientist and statistician for an adtech firm in Tel Aviv, Israel and a trading firm in Greenwich, Connecticut.  For any comments, questions or concerns, feel free to reach out to me at ihaberma@andrew.cmu.com  </p>
-</div>
-</div>
 
+  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+    <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail">
+          <img src="images/coup.png" class="blurb-thumbnail" alt="...">
+        </a>
+    </div>
+    <div class="media-body">
+      <h3>Coups d’état Prediction</h3>
+      <p>Modeling and predicting the onset of coups d’état
+      </p>
+      <p>The code and project is heavily adopted from Jay Ulfelder, who's original work can be found at https://dartthrowingchimp.wordpress.com/</p>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/Policy_memo.docx">Download Paper</a>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/D%26S_Coup/coup_data.R">View Code</a>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/D%26S_Coup/coup_data.R">Download Data</a>
+    </div>
+  </div>
+
+  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+    <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail">
+          <img src="images/ggplot.png" class="blurb-thumbnail" alt="...">
+        </a>
+    </div>
+    <div class="media-body">
+      <h3>ggplot Tutorial</h3>
+      <p>A tutorial for the python package ggplot</p>
+      <a href="https://nbviewer.jupyter.org/url/datasciencecourse.org/tutorial_final/68/ggplot_tutorial.ipynb">View Project</a>
+    </div>
+  </div>
+
+  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+    <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail">
+          <img src="images/bikes.png" class="blurb-thumbnail" alt="...">
+        </a>
+    </div>
+    <div class="media-body">
+      <h3>Citi Bike Analysis</h3>
+      <p>Analyzing and predicting the location of Citi Bike placement in New York City</p>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/TDS/tds_code.Rmd">View Code</a>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/TDS/tds_paper.pdf">View Paper</a>
+    </div>
+  </div>
+
+  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+    <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail">
+          <img src="images/gdp.png" class="blurb-thumbnail" alt="...">
+        </a>
+    </div>
+    <div class="media-body">
+      <h3>Business Cycle Analysis</h3>
+      <p>Analyzing the relationship between productivity and the economy to better understand the business cycle
+      </p>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-3/Exam3.Rmd">View Code</a>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-3/Exam3.pdf">View Paper</a>
+    </div>
+  </div>
+
+  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+    <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail">
+          <img src="images/urban.png" class="blurb-thumbnail" alt="...">
+        </a>
+    </div>
+    <div class="media-body">
+      <h3>Economic Growth Analysis</h3>
+      <p>Evaluating economic growth during the Primitive Accumulation
+      </p>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-1/Exam1.Rmd">View Code</a>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-1/Exam1.pdf">View Paper</a>
+    </div>  
+  </div>
+</div> <!--list-group-->
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
