--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
 
   <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
-        <a href="#" class="thumbnail">
+        <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb" class="thumbnail">
           <img src="images/dota.png" class="blurb-thumbnail" alt="...">
         </a>
     </div>
     <div class="media-body">
-      <h3>Dota Data Analysis</h3>
+      <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb"><h3>DOTA Data Analysis</h3></a>
       <p>Analyzing data from Defense of the Ancients to predict winning based on gold and experience</p>
       <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb">View Project</a>
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloykaxok2KwCfjHLxn">Download Data Pt1</a>
+      |
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloyjH08H1gWq_aNs-9">Download Data Pt2</a>
     </div>
   </div>
