--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="media-body">
       <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb"><h3>DOTA Data Analysis</h3></a>
       <p>Analyzing data from Defense of the Ancients to predict winning based on gold and experience</p>
+      |
       <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb">View Project</a>
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloykaxok2KwCfjHLxn">Download Data Pt1</a>
       |
@@ -64,12 +65,14 @@
         </a>
     </div>
     <div class="media-body">
-      <h3>Coups d’état Prediction</h3>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/Policy_memo.docx"><h3>Coups d’état Prediction</h3></a>
       <p>Modeling and predicting the onset of coups d’état
       </p>
       <p>The code and project is heavily adopted from Jay Ulfelder, who's original work can be found at https://dartthrowingchimp.wordpress.com/</p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/Policy_memo.docx">Download Paper</a>
+      |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/D%26S_Coup/coup_data.R">View Code</a>
+      |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/D%26S_Coup/coup_data.R">Download Data</a>
     </div>
   </div>
@@ -81,7 +84,7 @@
         </a>
     </div>
     <div class="media-body">
-      <h3>ggplot Tutorial</h3>
+      <a href="https://nbviewer.jupyter.org/url/datasciencecourse.org/tutorial_final/68/ggplot_tutorial.ipynb"><h3>ggplot Tutorial</h3></a>
       <p>A tutorial for the python package ggplot</p>
       <a href="https://nbviewer.jupyter.org/url/datasciencecourse.org/tutorial_final/68/ggplot_tutorial.ipynb">View Project</a>
     </div>
@@ -94,9 +97,10 @@
         </a>
     </div>
     <div class="media-body">
-      <h3>Citi Bike Analysis</h3>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/TDS/tds_paper.pdf"><h3>Citi Bike Analysis</h3></a>
       <p>Analyzing and predicting the location of Citi Bike placement in New York City</p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/TDS/tds_code.Rmd">View Code</a>
+      |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/TDS/tds_paper.pdf">View Paper</a>
     </div>
   </div>
@@ -108,10 +112,11 @@
         </a>
     </div>
     <div class="media-body">
-      <h3>Business Cycle Analysis</h3>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-3/Exam3.pdf"><h3>Business Cycle Analysis</h3></a>
       <p>Analyzing the relationship between productivity and the economy to better understand the business cycle
       </p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-3/Exam3.Rmd">View Code</a>
+      |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-3/Exam3.pdf">View Paper</a>
     </div>
   </div>
@@ -123,10 +128,11 @@
         </a>
     </div>
     <div class="media-body">
-      <h3>Economic Growth Analysis</h3>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-1/Exam1.pdf"><h3>Economic Growth Analysis</h3></a>
       <p>Evaluating economic growth during the Primitive Accumulation
       </p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-1/Exam1.Rmd">View Code</a>
+      |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/UDA_DAP-1/Exam1.pdf">View Paper</a>
     </div>  
   </div>
