Change DS Coup to pdf

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb"><h3>DOTA Data Analysis</h3></a>
+      <a href="https://github.com/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb"><h3>DOTA Data Analysis</h3></a>
       <p>Analyzing data from Defense of the Ancients to predict winning based on gold and experience</p>
-      <a href="https://nbviewer.jupyter.org/github/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb">View Project</a>
+      <a href="https://github.com/isaachaberman/Data-Science/blob/master/dota_analysis_5.0.ipynb">View Project</a>
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloykaxok2KwCfjHLxn">Download Data Pt1</a>
       |
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloyjH08H1gWq_aNs-9">Download Data Pt2</a>
@@ -64,11 +64,11 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/Policy_memo.docx"><h3>Coups d’état Prediction</h3></a>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/policy_memo.pdf"><h3>Coups d’état Prediction</h3></a>
       <p>Modeling and predicting the onset of coups d’état
       </p>
       <p>The code and project is heavily adopted from Jay Ulfelder, who's original work can be found at https://dartthrowingchimp.wordpress.com/</p>
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/Policy_memo.docx">Download Paper</a>
+      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/policy_memo.pdf">Download Paper</a>
       |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/coup_data.R">View Code</a>
       |
