--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://raw.githubusercontent.com/isaachaberman/isaachaberman.github.io/master/Website_Projects/PDS_Final-Project/dota_analysis.html"><h3>DOTA Data Analysis</h3></a>
+      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/dota_analysis.html"><h3>DOTA Data Analysis</h3></a>
       <p>Analyzing data from Defense of the Ancients to predict winning based on gold and experience</p>
-      <a href="https://raw.githubusercontent.com/isaachaberman/isaachaberman.github.io/master/Website_Projects/PDS_Final-Project/dota_analysis.html">View Project</a>
+      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/dota_analysis.html">View Project</a>
       |
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloykaxok2KwCfjHLxn">Download Data Pt1</a>
       |
@@ -84,9 +84,9 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://raw.githubusercontent.com/isaachaberman/isaachaberman.github.io/master/Website_Projects/PDS_Tutorial/ggplot_tutorial.html"><h3>ggplot Tutorial</h3></a>
+      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/ggplot_tutorial.html"><h3>ggplot Tutorial</h3></a>
       <p>A tutorial for the python package ggplot</p>
-      <a href="https://raw.githubusercontent.com/isaachaberman/isaachaberman.github.io/master/Website_Projects/PDS_Tutorial/ggplot_tutorial.html">View Project</a>
+      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/ggplot_tutorial.html">View Project</a>
     </div>
   </div>
 
