--- a/index/index.html
+++ b/index/index.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Isaac Haberman</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
+<!DOCTYPE html><head>  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="/components/style.css"><title>Isaac Haberman</title></head><body>
 
 <nav class="navbar navbar-default navbar-inverse" >
   <div class="container-fluid">
@@ -25,16 +17,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="about.html">About</a></li>
-        <li><a href="index.html">Projects</a></li>
-        <li><a href="resume.pdf">Résumé</a></li>
+        <li><a href="/about/about.html">About</a></li>
+        <li><a href="/index/index.html">Projects</a></li>
+        <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
-</div>
-
-<br>
+</nav><br>
 <br>
 <br>
 <br>
@@ -137,7 +126,6 @@
     </div>  
   </div>
 </div> <!--list-group-->
-
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
