--- a/about/about.html
+++ b/about/about.html
@@ -28,7 +28,7 @@
 <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
-          <img src="images/me.jpg" class="blurb-thumbnail" alt="...">
+          <img src="me.jpg" class="blurb-thumbnail" alt="...">
         </a>
     </div>
     <div class="media-body">
