fixed index page

--- a/about/about.html
+++ b/about/about.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/about/about.html">About</a></li>
-        <li><a href="/index/index.html">Projects</a></li>
+        <li><a href="index.html">Projects</a></li>
         <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
@@ -28,7 +28,7 @@
 <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
-          <img src="me.jpg" class="blurb-thumbnail" alt="...">
+          <img src="images/me.jpg" class="blurb-thumbnail" alt="...">
         </a>
     </div>
     <div class="media-body">
