--- a/Website_Projects/PDS_Final-Project/dota_analysis.html
+++ b/Website_Projects/PDS_Final-Project/dota_analysis.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html><head>  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="/components/style.css"><title>Isaac Haberman</title></head><body>
+<!DOCTYPE html><head><meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/components/style.css"><title>Isaac Haberman</title></head><body>
 
 <nav class="navbar navbar-default navbar-inverse" >
   <div class="container-fluid">
@@ -5383,6 +5384,9 @@ Twenty score:  0.764576484837
 </div>
     </div>
   </div>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="/bootstrap/js/jquery-3.1.1.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
