--- a/index-template.html
+++ b/index-template.html
@@ -1,7 +1,5 @@
-<br>
-<br>
-<br>
-<br>
+<h1>Projects</h1>
+
 
 <div class="list-group">
 
@@ -32,7 +30,7 @@
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/D%26S_Coup/policy_memo.pdf"><h3>Coups d’état Prediction</h3></a>
       <p>Modeling and predicting the onset of coups d’état
       </p>
-      <p>The code and project is heavily adopted from Jay Ulfelder, who's original work can be found at https://dartthrowingchimp.wordpress.com/</p>
+      <p>The code and project is heavily adopted from <a href="https://dartthrowingchimp.wordpress.com/">Jay Ulfelder</a></p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/policy_memo.pdf">Download Paper</a>
       |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/coup_data.R">View Code</a>
