--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Isaac Haberman</a>
+      <a class="navbar-brand" href="/">Isaac&nbsp;Haberman</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-center">
         <li><a href="/about/about.html">About</a></li>
-        <li><a href="/index.html">Projects</a></li>
+        <li><a href="/">Projects</a></li>
         <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
@@ -44,16 +44,16 @@
 
 <div class="list-group">
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/dota.png" class="blurb-thumbnail" alt="...">
         </a>
     </div>
     <div class="media-body">
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/dota_analysis.html"><h3>DOTA Data Analysis</h3></a>
+      <a href="/Website_Projects/PDS_Final-Project/dota_analysis.html"><h3>DOTA Data Analysis</h3></a>
       <p>Analyzing data from Defense of the Ancients to predict winning based on gold and experience</p>
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/dota_analysis.html">View Project</a>
+      <a href="/Website_Projects/PDS_Final-Project/dota_analysis.html">View Project</a>
       |
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloykaxok2KwCfjHLxn">Download Data Pt1</a>
       |
@@ -61,7 +61,7 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/coup.png" class="blurb-thumbnail" alt="...">
@@ -80,20 +80,20 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/ggplot.png" class="blurb-thumbnail" alt="...">
         </a>
     </div>
     <div class="media-body">
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Tutorial/ggplot_tutorial.html"><h3>ggplot Tutorial</h3></a>
+      <a href="/Website_Projects/PDS_Tutorial/ggplot_tutorial.html"><h3>ggplot Tutorial</h3></a>
       <p>A tutorial for the python package ggplot</p>
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Tutorial/ggplot_tutorial.html">View Project</a>
+      <a href="/Website_Projects/PDS_Tutorial/ggplot_tutorial.html">View Project</a>
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/bikes.png" class="blurb-thumbnail" alt="...">
@@ -108,7 +108,7 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/gdp.png" class="blurb-thumbnail" alt="...">
@@ -124,7 +124,7 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/urban.png" class="blurb-thumbnail" alt="...">
