--- a/Website_Projects/PDS_Final-Project/dota_analysis.html
+++ b/Website_Projects/PDS_Final-Project/dota_analysis.html
@@ -27,14 +27,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Isaac Haberman</a>
+      <a class="navbar-brand" href="/">Isaac&nbsp;Haberman</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-center">
         <li><a href="/about/about.html">About</a></li>
-        <li><a href="/index.html">Projects</a></li>
+        <li><a href="/">Projects</a></li>
         <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
