--- a/about/about-template.html
+++ b/about/about-template.html
@@ -1,6 +1,6 @@
 
 
-<div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+<div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="me.jpg" class="blurb-thumbnail" alt="...">
