--- a/about/about.html
+++ b/about/about.html
@@ -27,21 +27,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Isaac Haberman</a>
+      <a class="navbar-brand" href="/">Isaac&nbsp;Haberman</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-center">
         <li><a href="/about/about.html">About</a></li>
-        <li><a href="/index.html">Projects</a></li>
+        <li><a href="/">Projects</a></li>
         <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
 </nav>
 
-<div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+<div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="me.jpg" class="blurb-thumbnail" alt="...">
