--- a/index-template.html
+++ b/index-template.html
@@ -3,16 +3,16 @@
 
 <div class="list-group">
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/dota.png" class="blurb-thumbnail" alt="...">
         </a>
     </div>
     <div class="media-body">
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/dota_analysis.html"><h3>DOTA Data Analysis</h3></a>
+      <a href="/Website_Projects/PDS_Final-Project/dota_analysis.html"><h3>DOTA Data Analysis</h3></a>
       <p>Analyzing data from Defense of the Ancients to predict winning based on gold and experience</p>
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Final-Project/dota_analysis.html">View Project</a>
+      <a href="/Website_Projects/PDS_Final-Project/dota_analysis.html">View Project</a>
       |
       <a href="https://1drv.ms/u/s!AmOVXN_ZlKloykaxok2KwCfjHLxn">Download Data Pt1</a>
       |
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/coup.png" class="blurb-thumbnail" alt="...">
@@ -39,20 +39,20 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/ggplot.png" class="blurb-thumbnail" alt="...">
         </a>
     </div>
     <div class="media-body">
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Tutorial/ggplot_tutorial.html"><h3>ggplot Tutorial</h3></a>
+      <a href="/Website_Projects/PDS_Tutorial/ggplot_tutorial.html"><h3>ggplot Tutorial</h3></a>
       <p>A tutorial for the python package ggplot</p>
-      <a href="http://www.isaachaberman.com/Website_Projects/PDS_Tutorial/ggplot_tutorial.html">View Project</a>
+      <a href="/Website_Projects/PDS_Tutorial/ggplot_tutorial.html">View Project</a>
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/bikes.png" class="blurb-thumbnail" alt="...">
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/gdp.png" class="blurb-thumbnail" alt="...">
@@ -83,7 +83,7 @@
     </div>
   </div>
 
-  <div class="row content container col-sm-10 col-sm-offset-1 blurb list-group-item">
+  <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
           <img src="images/urban.png" class="blurb-thumbnail" alt="...">
