--- a/Website_Projects/PDS_Final-Project/dota_analysis.html
+++ b/Website_Projects/PDS_Final-Project/dota_analysis.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/components/style.css">
 
-<title>Isaac Haberman</title></head><body>
+<title>Isaac Haberman</title><link rel="stylesheet" href="dota_analysis.css"></head><body>
 
 <nav class="navbar navbar-default navbar" >
   <div class="container">
