Moved nav to side

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </nav><h1>Projects</h1>
 
 
-<div class="list-group">
+<div class="list-group container">
 
   <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
