--- a/index-template.html
+++ b/index-template.html
@@ -1,7 +1,7 @@
 <h1>Projects</h1>
 
 
-<div class="list-group">
+<div class="list-group container">
 
   <div class="row content container col-md-12 blurb list-group-item">
     <div class="col-xs-6 col-md-3">
