--- a/Website_Projects/PDS_Final-Project/dota_analysis.html
+++ b/Website_Projects/PDS_Final-Project/dota_analysis.html
@@ -14,7 +14,7 @@
 <!DOCTYPE html><head><meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/components/style.css">
-
+<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 <title>Isaac Haberman</title><link rel="stylesheet" href="dota_analysis.css"></head><body>
 
 <nav class="navbar navbar-default navbar" >
