--- a/Website_Projects/PDS_Tutorial/ggplot_tutorial.html
+++ b/Website_Projects/PDS_Tutorial/ggplot_tutorial.html
@@ -14,7 +14,7 @@
 <!DOCTYPE html><head><meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/components/style.css">
-<title>Isaac Haberman</title></head><body>
+<title>Isaac Haberman</title><link rel="stylesheet" href="ggplot_tutorial.css"></head><body>
 
 <nav class="navbar navbar-default navbar" >
   <div class="container">
@@ -32,8 +32,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-center">
-        <li><a href="/about/about.html">About</a></li>
         <li><a href="/">Projects</a></li>
+        <li><a href="/about/about.html">About</a></li>
         <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
