--- a/index-template.html
+++ b/index-template.html
@@ -27,11 +27,11 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/blob/master/Website_Projects/D%26S_Coup/policy_memo.pdf"><h3>Coups d’état Prediction</h3></a>
+      <a href="isaachaberman.github.io/Website_Projects/D&S_Coup/policy_memo.pdf"><h3>Coups d’état Prediction</h3></a>
       <p>Modeling and predicting the onset of coups d’état
       </p>
       <p>The code and project is heavily adopted from <a href="https://dartthrowingchimp.wordpress.com/">Jay Ulfelder</a></p>
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/policy_memo.pdf">Download Paper</a>
+      <a href="isaachaberman.github.io/Website_Projects/D&S_Coup/policy_memo.pdf">Download Paper</a>
       |
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/D%26S_Coup/coup_data.R">View Code</a>
       |
@@ -59,11 +59,11 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/TDS/tds_paper.pdf"><h3>Citi Bike Analysis</h3></a>
+      <a href="isaachaberman.github.io/Website_Projects/TDS/tds_paper.pdf"><h3>Citi Bike Analysis</h3></a>
       <p>Analyzing and predicting the location of Citi Bike placement in New York City</p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/TDS/tds_code.Rmd">View Code</a>
       |
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/TDS/tds_paper.pdf">View Paper</a>
+      <a href="isaachaberman.github.io/Website_Projects/TDS/tds_paper.pdf">View Paper</a>
     </div>
   </div>
 
@@ -74,12 +74,12 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-3/Exam3.pdf"><h3>Business Cycle Analysis</h3></a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-3/Exam3.pdf"><h3>Business Cycle Analysis</h3></a>
       <p>Analyzing the relationship between productivity and the economy to better understand the business cycle
       </p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-3/Exam3.Rmd">View Code</a>
       |
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-3/Exam3.pdf">View Paper</a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-3/Exam3.pdf">View Paper</a>
     </div>
   </div>
 
@@ -90,12 +90,12 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-1/Exam1.pdf"><h3>Economic Growth Analysis</h3></a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-1/Exam1.pdf"><h3>Economic Growth Analysis</h3></a>
       <p>Evaluating economic growth during the Primitive Accumulation
       </p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-1/Exam1.Rmd">View Code</a>
       |
-      <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-1/Exam1.pdf">View Paper</a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-1/Exam1.pdf">View Paper</a>
     </div>  
   </div>
 </div> <!--list-group-->
