set html for projects

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-3/Exam3.pdf"><h3>Business Cycle Analysis</h3></a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-3/Exam3.html"><h3>Business Cycle Analysis</h3></a>
       <p>Analyzing the relationship between productivity and the economy to better understand the business cycle
       </p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-3/Exam3.Rmd">View Code</a>
       |
-      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-3/Exam3.pdf">View Paper</a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-3/Exam3.html">View Paper</a>
     </div>
   </div>
 
@@ -130,12 +130,12 @@
         </a>
     </div>
     <div class="media-body">
-      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-1/Exam1.pdf"><h3>Economic Growth Analysis</h3></a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-1/Exam1.html"><h3>Economic Growth Analysis</h3></a>
       <p>Evaluating economic growth during the Primitive Accumulation
       </p>
       <a href="https://github.com/isaachaberman/isaachaberman.github.io/raw/master/Website_Projects/UDA_DAP-1/Exam1.Rmd">View Code</a>
       |
-      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-1/Exam1.pdf">View Paper</a>
+      <a href="isaachaberman.github.io/Website_Projects/UDA_DAP-1/Exam1.html">View Paper</a>
     </div>  
   </div>
 </div> <!--list-group-->
