--- a/Website_Projects/D&S_Coup/policy_memo.html
+++ b/Website_Projects/D&S_Coup/policy_memo.html
@@ -1458,7 +1458,7 @@ normal'><span style='font-size:12.0pt;font-family:"Times New Roman"'>Date:
 
 <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
 normal'><span style='font-size:12.0pt;font-family:"Times New Roman"'>RE:
-Modeling the onset of Coups dՎtat<o:p></o:p></span></p>
+Modeling the onset of Coups D'etat<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
 normal'><span style='font-size:12.0pt;font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
@@ -1470,7 +1470,7 @@ font-family:"Times New Roman"'>Executive Summary<o:p></o:p></span></b></p>
 <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;text-align:
 justify;line-height:normal'><span style='font-size:12.0pt;font-family:"Times New Roman"'>Through
 my statistical analysis, I have built a model for predicting the onset of coups
-dՎtat.<span style='mso-spacerun:yes'>&nbsp; </span></span><span
+D'etat.<span style='mso-spacerun:yes'>&nbsp; </span></span><span
 style='font-size:12.0pt;font-family:"Times New Roman";mso-fareast-font-family:
 "Times New Roman";mso-bidi-font-weight:bold'>The State Department and the CIA
 will be able to practice better statecraft, better diplomacy, and better
@@ -1483,7 +1483,7 @@ accuracy, relies on fewer assumptions, and is easier to understand and recreate
 than the Ulfelder model.<span style='mso-spacerun:yes'>&nbsp; </span></span><span
 style='font-size:12.0pt;font-family:"Times New Roman"'>The State Department and
 The CIA should adopt my chosen model as their statistical model for predicting
-the onset of Coups dՎtat.</span><span style='font-size:12.0pt;font-family:
+the onset of Coups D'etat.</span><span style='font-size:12.0pt;font-family:
 "Times New Roman";mso-fareast-font-family:"Times New Roman";mso-bidi-font-weight:
 bold'><span style='mso-spacerun:yes'>&nbsp; </span><span
 style='mso-spacerun:yes'>&nbsp;&nbsp;</span><span
