--- a/404.html
+++ b/404.html
@@ -39,7 +39,8 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
 </nav><h1> 404 </h1> 
-<p>  File not found </p>    <div id="footer">Copyright 2017 Isaac Haberman</div>
+<h2 style = "text-align:center;">  File not found </h2>
+    <div id="footer">Copyright 2017 Isaac Haberman</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/bootstrap/js/jquery-3.1.1.min.js"></script>
